# Bang

./: .gitignore  Bang.cabal  LICENSE  README.md  brave.midi  chatlog.txt  music.hs  package.yaml  stack.yaml
src/: Bang.hs  LICENSE  LICENSE-hmidi  play.hs  test.hs
src/Bang/: Interface.hs  Interpreter.hs  Live.hs  Music.hs  Music2.hs  Operators.hs
src/Bang/Experimental/: ConcurrentDo.hs  Live.hs  SequentialDo.hs
src/Bang/Interface/: .Base.hs.swp  Base.hs  Drum.hs  MDrum.hs
src/Bang/Music/: Class.hs  Drum.hs  MDrum.hs  Operators.hs  Transform.hs  Utils.hs
src/Examples/: play.hs  syntaxRebound  syntaxRebound.hs
src/System/: MIDI.hs
src/System/MIDI/: Base.hs  MacOSX.hs  Placeholder.hs  Win32.hs
src/System/MacOSX/: CoreAudio.hs  CoreFoundation.hs  CoreMIDI.hs
src/System/Win32/: MIDI.hs
test/: Test.hs
